--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
   <script src="script.js"></script>
 </head>
 <body>
+  <header class="header">
+    <h1 class="h1">
+      Consulta de CEP
+    </h1>
+  </header>
   <main>
     <section>
       <form class="form-container">
@@ -19,19 +24,19 @@
         </section>
         <section class="form-group">
           <label for="logradouro">Logradouro</label>
-          <input type="text" class="form-control" id="logradouro">
+          <input type="text" placeholder="Praça da Sé" class="form-control" id="logradouro">
         </section>
         <section class="form-group">
           <label for="bairro">Bairro</label>
-          <input type="text" class="form-control" id="bairro">
+          <input type="text" placeholder="Sé" class="form-control" id="bairro">
         </section>
         <section class="form-group">
           <label for="localidade">Cidade</label>
-          <input type="text" class="form-control" id="localidade">
+          <input type="text" placeholder="São Paulo" class="form-control" id="localidade">
         </section>
         <section class="form-group">
           <label for="uf">UF</label>
-          <input type="text" class="form-control" id="uf">
+          <input type="text" placeholder="SP" class="form-control" id="uf">
         </section>
       </form>
     </section>
