criaçao de um button para pesquisar o cep

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </h1>
   </header>
   <main>
-    <section>
+    <section class="section-container">
       <form class="form-container">
         <section class="form-group">
           <label for="cep">CEP</label>
@@ -38,7 +38,8 @@
           <label for="uf">UF</label>
           <input type="text" placeholder="SP" class="form-control" id="uf">
         </section>
-      </form>
+      </form> 
+      <button class="btn btn-success">Consultar</button>     
     </section>
   </main>
 </body>
